<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/drawerLayout">
    <include layout="@layout/toolbar"
        />





    <LinearLayout

        android:layout_marginTop="70sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:gravity="top|center">



        <LinearLayout
            android:orientation="horizontal"
            android:gravity="top|center"
            android:layout_marginBottom="30sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:layout_width="wrap_content"
                android:background="@drawable/main_calendar_btn"
                android:padding="2sp"
                android:layout_height="wrap_content">


                <TextView
                    android:layout_width="100sp"
                    android:layout_height="wrap_content"
                    android:id="@+id/main_My_Calendar"
                    android:gravity="center"

                    android:fontFamily="@font/montserrat_light"

                    android:padding="5sp"
                    android:text="@string/main_my_calendar"


                    android:textColor="@android:color/white"
                    android:textSize="14sp"/>


            </LinearLayout>

           <LinearLayout
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:background="@drawable/main_plan_btn"
               android:padding="2sp">

               <TextView
                   android:layout_width="100sp"
                   android:gravity="center"
                   android:layout_height="wrap_content"
                   android:id="@+id/main_My_Plan"
                   android:text="@string/main_my_plan"
                   android:padding="5sp"
                   android:fontFamily="@font/montserrat_light"

                   android:textColor="@android:color/holo_purple"
                   android:textSize="14sp"/>


           </LinearLayout>

        </LinearLayout>



        <FrameLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/frame_main"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:background="@drawable/bg_red_border_vacation"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_vacation"
                android:textSize="13sp"
                android:fontFamily="@font/montserrat_light"
                android:layout_gravity="center"
                android:textColor="@android:color/black"
                />
            <TextView
                android:layout_marginLeft="20sp"
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:background="@drawable/bg_blue_border_upcoming"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_light"
                android:text="@string/main_active"
                android:textSize="13sp"
                android:layout_gravity="center"
                android:textColor="@android:color/black"
                />
            <TextView
                android:layout_marginLeft="20sp"
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:background="@drawable/bg_green_border_delivered"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_delivered"
                android:textSize="13sp"
                android:fontFamily="@font/montserrat_light"
                android:layout_gravity="center"
                android:textColor="@android:color/black"
                />



        </LinearLayout>









    </LinearLayout>









        <com.google.android.material.navigation.NavigationView
            android:layout_width="250sp"
            android:layout_height="match_parent"
            android:id="@+id/navigationView"
            android:layout_gravity="start">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/linearLayout"
                android:orientation="vertical"
                >
                <include layout="@layout/navigationheader"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"

                    android:id="@+id/navigationHeader"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:layout_marginTop="20sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/navigationHeader"
                    android:id="@+id/recyclerView1"/>
                <View style="@style/Divider"
                    android:layout_marginTop="5sp"/>
                <TextView
                    android:layout_marginTop="10sp"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Others"
                    android:layout_gravity="center"
                    android:textColor="#000000"
                    android:layout_marginBottom="5sp"

                    android:textSize="15sp"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:layout_marginTop="20sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/navigationHeader"
                    android:id="@+id/recyclerView2"/>

  </LinearLayout>



        </com.google.android.material.navigation.NavigationView>












</androidx.drawerlayout.widget.DrawerLayout>